# meridian

./: .ansible-lint  .gitignore  AGENTS.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  SECURITY.md  TODO.md  ansible.cfg  cluster.example.yml  context7.json  install.sh  inventory-chain.yml.example  inventory.yml  inventory.yml.example  meridian  playbook-chain.yml  playbook-uninstall.yml  playbook.yml  pyproject.toml  requirements.yml  setup.sh
.githooks/: pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  connection_issue.yml  feature_request.yml
.github/workflows/: CLAUDE.md  cd.yml  ci.yml  release.yml
docs/: SHA256SUMS  architecture.md  demo.html  i18n.js  index.html  install.sh  meridian  ping.html  setup.sh
docs/ai/: architecture.md  context.md  reference.md  troubleshooting.md
group_vars/: all.yml
roles/caddy/tasks/: main.yml
roles/caddy/templates/: Caddyfile.j2  connection-info.html.j2
roles/client_management/tasks/: add_client.yml  main.yml  remove_client.yml
roles/common/tasks/: firewall.yml  main.yml  packages.yml  sysctl.yml
roles/decoy_site/tasks/: main.yml
roles/decoy_site/templates/: connection-info.html.j2  index.html.j2
roles/docker/tasks/: main.yml
roles/haproxy/handlers/: main.yml
roles/haproxy/templates/: haproxy.cfg.j2
roles/output/tasks/: main.yml
roles/output/templates/: connection-info.html.j2  connection-summary-client.txt.j2  connection-summary.txt.j2
src/meridian/: CLAUDE.md  __init__.py  __main__.py  ai.py  ansible.py  branding.py  cli.py  cluster.py  config.py  console.py  credentials.py  display.py  facts.py  migrations.py  models.py  operations.py  output.py  panel.py  protocols.py  pwa.py  remnawave.py  render.py  renderers.py  servers.py  ssh.py  update.py  urls.py  xray_client.py
tasks/: VISION.md  WAVE1.md
tests/: CLAUDE.md  conftest.py  render_templates.py  test_adapters_execution.py  test_ansible.py  test_apply_command.py  test_cli.py  test_client.py  test_cluster.py  test_config.py  test_console.py  test_core_boundaries.py  test_core_clients.py  test_core_deploy.py  test_core_deploy_planning.py  test_core_deploy_validation.py  test_core_execution.py  test_core_fleet.py  test_core_output.py  test_core_schema.py  test_core_workflows.py  test_credentials.py  test_dev.py  test_diagnostics.py  test_example_cluster_yml.py  test_facts.py  test_fleet_commands.py  test_infra_providers.py  test_integration_3xui.py  test_migrations.py  test_node_commands.py  test_operations.py  test_output.py  test_panel.py  test_plan_command.py  test_probe.py  test_protocols.py  test_pwa.py  test_reconciler.py  test_recover.py  (+19 more)
tests/e2e/: CLAUDE.md  Dockerfile  docker-compose.e2e.yml  mock-systemctl.sh  run-e2e.sh
tests/provision/: CLAUDE.md  conftest.py  test_common.py  test_contract.py  test_ensure.py  test_panel.py  test_pipeline.py  test_recipe.py  test_relay_provision.py  test_services.py  test_steps.py  test_warp.py  test_xray.py
tests/realvm/: CLAUDE.md  README.md  __init__.py  orchestrator.py
tests/systemlab/: CLAUDE.md  compose.yml
website/: .gitignore  CLAUDE.md  astro.config.mjs  package-lock.json  package.json
website/public/: CNAME  robots.txt
website/scripts/: validate-mermaid.mjs
website/src/: content.config.ts
(+233 files in other folders)
