[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meridian-vpn"
dynamic = ["version"]
description = "Deploy a censorship-resistant proxy server — hardened by default, shared via QR code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "uburuntu" }]
keywords = ["vpn", "proxy", "vless", "reality", "xray"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: System :: Networking",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
    "packaging>=23.0",
    "jinja2>=3.0",
    "segno>=1.5",
    "httpx>=0.27",
    "remnawave==2.7.1",
]

[project.scripts]
meridian = "meridian.cli:app"

[project.urls]
Homepage = "https://getmeridian.org"
Repository = "https://github.com/uburuntu/meridian"
Issues = "https://github.com/uburuntu/meridian/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4", "mypy>=1.0", "types-PyYAML>=6.0"]

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"

[tool.hatch.build.targets.wheel]
packages = ["src/meridian"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
    "/website",
    "/tests",
    "/dist",
    "*.tar",
    "*.tar.gz",
    "/docker-compose.test.yml",
    "/context7.json",
    "/Makefile",
    "/BACKLOG.md",
    "/CODE_OF_CONDUCT.md",
    "/CONTRIBUTING.md",
    "/SECURITY.md",
    "/uv.lock",
    "CLAUDE.md",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
